traefik/5-traefik.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    # A note for any GKE users: To prevent the default L7 load balancer 
    # ingress controller from picking up this configuration, I set the 
    # kubernetes.io/ingress.class annotation to traefik. Google’s ingress 
    # controller will ignore any ingresses whose class is not set to gcp.
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: stilton.local
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.local
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.local
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
